2000-11-12  Jason Novotny <novotny@george.lbl.gov>

	* myproxy_server.c: Added support for running myproxy server
	out of inetd. This is done by testing getpeername successful

	* INSTALL: added instructions on modifying /etc/services and 
	/etc/inetd.conf
	
2000-10-11  Von Welch  <vwelch@ncsa.uiuc.edu>

	* version.h (MYPROXY_VERSION_DATE): v0.2alpha3 11 Oct 2000

	* myproxy-programs.html: Updated myproxy-destroy docs.
	* myproxy_destroy.c (main): Don't run grid-proxy-init, just use
	existing user proxy.
	(main): Don't bother prompting user for unused pass phrase, just
	send over a dummy pass phrase.

2000-10-10  Von Welch  <vwelch@ncsa.uiuc.edu>

	* myproxy_server.c: Move include of <netinet/in.h> before
	<arpa/inet.h> as some Solaris 2.5.1 systems require this order.

	* gsi_socket.c, gsi_socket_test.c, myproxy.c, myproxy_creds.c,
	myproxy_server.c, myproxy_server_config.c: Replaced snprintf()
	calles with functions from string_func.c because of snprintf()
	being non-existant on Solaris 2.5.1 boxes and behavioral
	differences in return value between gnu libc and solaris
	implementations.

	* myproxy.c: Added encode_command(), encode_response() and
	encode_lifetime() functions.
	
	* myproxy_log.c: Removed my_vsnprintf() as it is now in
	string_funcs.c

	* verror.c: Removed my_vsnprintf() as it is now in
	string_funcs.c
	
	* string_funcs.c, string_funcs.h: Created these files.

	* myproxy_destroy.c (main): Bug fix - use created proxy file for
	authentication and not default proxy.
	(main): Bug fix - passphrase was not being correctly read.

2000-10-09  Von Welch  <vwelch@ncsa.uiuc.edu>

	* verror.c (my_vsnprintf): Fixed inverted logic in checking of
	HAVE_VSNPRINTF
	
2000-10-04  Von Welch  <vwelch@ncsa.uiuc.edu>

	* myproxy_server.c (main): Print strerror() when failure occurs
	opening configuration file.

	* myproxy.c(parse_command): Fixed command_value type.

2000-10-03  Von Welch  <vwelch@ncsa.uiuc.edu>

	* ssl_utils.c: Fixes for openssl build with PEM callback